--- a/hdbi-tests.cabal
+++ b/hdbi-tests.cabal
@@ -24,6 +24,7 @@ source-repository head
 library
   exposed-modules:     Database.HDBI.Tests
   ghc-options: -Wall -fno-warn-orphans
+  ghc-prof-options: -auto-all
   build-depends:       base ==4.5.*
                      , Decimal >= 0.2.1
                      , HUnit
