--- a/hdbi-tests.cabal
+++ b/hdbi-tests.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                hdbi-tests
-version:             1.1.0
+version:             1.1.1
 synopsis:            test suite for testing HDBI
 description:         The set of database-independent tests for
   testing the common interface implementation by drivers.
@@ -35,6 +35,7 @@ library
                      , ieee754
                      , quickcheck-assertions
                      , quickcheck-instances
+                     , stm
                      , test-framework <= 0.7
                      , test-framework-hunit
                      , test-framework-quickcheck2
